<resources>
    <string name="app_name">FitPlanner</string>
    <string name="logoDark">Logo Dark [img]</string>
    <string name="createdByAgataK">Created by Agata K</string>
    <string name="buttonImage">button image</string>
    <string name="name">Imię</string>
    <string name="settings">Ustawienia</string>
    <string name="scores">wyniki</string>
    <string name="logoLight">logo light picture</string>
    <string name="splash_screen_waiting_message">Trwa pobieranie danych użytkownika</string>
    <string name="birthDate">Data urodzenia</string>
    <string name="weight">waga</string>
    <string name="height">wzrost</string>
    <string name="save">zapisz</string>
    <string name="app_info">Informacje o aplikacji</string>
    <string name="changeDate">zmień datę</string>
    <string name="date">data</string>
    <string name="birthDateValidationNull">Birthdate is required field</string>
    <string name="newEntityErrorValidationMessage">Dane nie są prawidłowe. Popraw a następnie spóbuj ponownie.</string>
    <string name="nameValidationError">Imię musi zaczynać się od wielkiej litery oraz zawierać od 3 do 15 znaków.</string>
    <string name="sportNameValidationError">Nazwa sportu musi zaczynać się od wielkiej litery oraz zawierać od 3 do 15 znaków.</string>
    <string name="birthDateValidationError">Data urodzenia musi być większa od 1900-01-01 oraz mniejsza niż dzisiejsza.</string>
    <string name="heightValidationError">Wzrost musi być liczbą całkowitą większą od 0.</string>
    <string name="kcalPerHValidationError">Liczba kalorii spalanych w godzinę musi być liczbą całkowitą większą od 0.</string>
    <string name="weightValidationError">Waga musi być liczbą całkowitą większą od 0.</string>
    <string name="hello">Cześć!</string>
    <string name="profile">Profil</string>
    <string name="history">Historia</string>
    <string name="train">Trenuj</string>
    <string name="sport">Dyscyplina</string>
    <string name="firebaseChannel">fitplannerChannel</string>
    <string name="firebaseTokenKey">fireTokenKey</string>
    <string name="msgTitle">title</string>
    <string name="msgBody">body</string>
    <string name="shortAboutApp">Aplikacja powstała jako część projektu zaliczeniowego. Napisana przez Agatę Kołtun.</string>
    <string name="copyFirebaseToken">Przytrzymaj by skopiować token Firebase\'a.</string>
    <string name="tokenCopied">Token skopiowany do schowka.</string>
    <string name="updateWeight">Aktualizuj wagę</string>
    <string name="prevWeight">Poprzednia waga</string>
    <string name="currentWeight">Nowa waga</string>
    <string name="newWeightErrorValidationMessage">Wprowadzono niepoprawną wagę lub datę. Popraw by móc kontynuoować.</string>
    <string name="addSport">Dodaj dyscyplinę</string>
    <string name="title_activity_single_sport">SingleSportActivity</string>
    <string name="title_activity_sport_details">SportDetailsActivity</string>
    <string name="kcalTileLong">Liczba spalonych kalorii w ciągu godziny ćwiczeń</string>
    <string name="burnedKcalTileLong">Spalone kalorie</string>
    <string name="delete">Usuń</string>
    <string name="sportWillBeRemoved">Dana dyscyplina sportowa została usunięta.</string>
    <string name="sportName">Nazwa dyscypliny</string>
    <string name="sportUrlHint">Url obrazka dyscypliny</string>
    <string name="sportUrlValidationError">Wprowadzony url do obrazka jest nieprawidłowy.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="removeAllUserData">Usuń wszystkie dane aplikacji</string>
    <string name="clearAllAppData">Wyczyść dane aplikacji</string>
    <string name="clearAllAppDataQuestion">Czy na pewno chcesz wyczyścić wszystkie dane aplikacji?</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="simpleWeightDateFormatHint">yyyy-MM-dd</string>
    <string name="weightDateValidationError">Format wprowadzonej daty to YYYY-MM-DD, maks. dzisiejsza.</string>
    <string name="weightIsBeforeRecentDate">Aktualna waga nie zostanie zaktualizowana, gdyż najaktualniejsza waga jaka została wprowadzona to: </string>
    <string name="newWeight">Wprowadzono nową datę.</string>
    <string name="confirmSaveNewWeight">Potwierdz wprowadzenie nowej wagi.</string>
    <string name="weightChart">Wykres wagi</string>
    <string name="weightChartTitle">Wykres wagi z ostatnich maks. trzydziestu dni</string>
    <string name="removeSport">Usunięcie dyscypliny sportowej</string>
    <string name="removeSportConfirmationMsg">Czy na pewno chcesz usunąć tą dyscyplinę sportową?</string>
    <string name="poorCountOfWeightValues"><![CDATA[Wprowadź więcej rekordów wagi dla ostatnich 30 dni aby uzyskać ciekawszy wykres. (Profil -> Aktualizuj wagę)]]></string>
    <string name="from">od</string>
    <string name="to">do</string>
    <string name="resultOfDays">Wynik z dnia:</string>
    <string name="my_trainings">Moje treningi</string>
    <string name="fitPlannerActivityNotificationDescription">Przypomnienie o aktywności sportowej - wysłano z aplikacji FitPlanner</string>
    <string name="addNewActivityNotification">Dodawanie przypomnienia o treningu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Anuluj</string>
    <string name="addNotification">Dodaj przypomnienie</string>
    <string name="startTraining">Rozpocznij trening</string>
    <string name="sportChooseHint">Wybór dyscypliny - kliknij by wybrać</string>
    <string name="trainingPlaceOptionalHint">Miejsce treningu - pole opcjonalne</string>
    <string name="labelTrainingTime">Godzina treningu</string>
    <string name="labelTrainingDate">Data treningu</string>
    <string name="labelTrainingSport">Dyscyplina</string>
    <string name="returnFromCalendar">Powrócono z kalendarza.</string>
    <string name="timeStartHint">Czas rozpoczęcia (yyyy-MM-dd HH:mm:ss)</string>
    <string name="timeEndHint">Czas zakończenia (yyyy-MM-dd HH:mm:ss)</string>
    <string name="start">Start</string>
    <string name="pause">Pauza</string>
    <string name="stop">Stop</string>
    <string name="chronometrAlreadyStarted">Stoper już wystartowany</string>
    <string name="chronometrStarted">Stoper wystartował</string>
    <string name="reset">Reset</string>
    <string name="trainingCreated">Rezultat z treningu został zapisany</string>
    <string name="dummyText">dummy text</string>
    <string name="lostKcals">Utracone kalorie</string>
    <string name="workoutStartTile">Rozpoczęcie treningu</string>
    <string name="workoutStopTile">Zakończenie treningu</string>
    <string name="cannotTrainWithoutSport">Nie można ćwiczyć - brak dostępnych dyscyplin.</string>
</resources>
