<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/commonMargin"
        android:paddingLeft="@dimen/commonMargin"
        android:paddingRight="@dimen/commonMargin">

        <ImageView android:src="@drawable/logo_light"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="@dimen/commonMargin"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logoLight" />

        <!-- START : User details data -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginBottom="@dimen/halfMargin">
            <EditText android:id="@+id/input_name_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:autofillHints="name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginBottom="@dimen/halfMargin">
            <EditText android:id="@+id/label_date_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/birthDate"
                android:autofillHints="name"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>

        <CalendarView
            android:id="@+id/input_birth_date_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginBottom="@dimen/halfMargin">
            <EditText android:id="@+id/input_weight_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/weight"
                android:autofillHints="name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginBottom="@dimen/halfMargin">
            <EditText android:id="@+id/input_height_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/height"
                android:autofillHints="name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Save Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save_r"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/commonMargin"
            android:layout_marginBottom="@dimen/commonMargin"
            android:padding="@dimen/halfMargin"
            android:text="@string/save"/>

        <TextView android:id="@+id/link_app_info_r"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/halfMargin"
            android:text="@string/app_info"
            android:gravity="center"
            android:textSize="@dimen/commonFontSize"/>
    </LinearLayout>
</ScrollView>