<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ListView
        android:id="@+id/lv_trainings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/button_add_my_trainings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_fab_label="@string/cancel"
        fab:menu_backgroundColor="@color/creamyWhite"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="@color/redMedium"
        fab:menu_colorPressed="@color/redLight"
        fab:menu_colorRipple="@color/redDark"
        android:padding="@dimen/commonMargin">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_add_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            fab:fab_size="mini"
            fab:fab_label="@string/addNotification"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_train"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            fab:fab_size="mini"
            fab:fab_label="@string/startTraining"/>

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>