<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/commonMargin"
        android:paddingTop="@dimen/commonMargin"
        android:paddingRight="@dimen/commonMargin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginBottom="@dimen/halfMargin">

            <EditText
                android:id="@+id/input_prev_weight_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:enabled="false"
                android:hint="@string/prevWeight"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginBottom="@dimen/halfMargin">

            <EditText
                android:id="@+id/input_current_weight_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/currentWeight"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_marginBottom="@dimen/halfMargin">
            <EditText android:id="@+id/input_weight_date_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/simpleWeightDateFormatHint"
                android:autofillHints="name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Save Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save_weight_r"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/commonMargin"
            android:layout_marginBottom="@dimen/commonMargin"
            android:padding="@dimen/halfMargin"
            android:text="@string/save"/>
    </LinearLayout>
</ScrollView>